Add all files, key adds:category.csv, subcategory.csv and campaign.csv

--- a/ETL_Mini_Project_Starter_Code.ipynb
+++ b/ETL_Mini_Project_Starter_Code.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import dependencies\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "pd.set_option('max_colwidth', 400)\n"
+    "pd.set_option('max_colwidth', 400)"
    ]
   },
   {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "4      False           theater/plays  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -233,10 +233,7 @@
     }
    ],
    "source": [
-    "# Get a brief summary of the crowdfunding_info DataFrame.\n",
-    "df = pd.DataFrame(crowdfunding_info_df)\n",
-    "\n",
-    "df.info()"
+    "# Get a brief summary of the crowdfunding_info DataFrame.\n"
    ]
   },
   {
@@ -260,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -272,19 +269,18 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Get the crowdfunding_info_df columns.\n",
-    "crowdfunding_info_df.columns"
+    "# Get the crowdfunding_info_df columns.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -462,23 +458,18 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Assign the category and subcategory values to category and subcategory columns.\n",
-    "\n",
-    "crowdfunding_info_df[['category', 'subcategory']] = crowdfunding_info_df['category & sub-category'].str.split('/', expand=True)\n",
-    "\n",
-    "\n",
-    "crowdfunding_info_df.head()"
+    "# Assign the category and subcategory values to category and subcategory columns.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +489,6 @@
    "source": [
     "# Get the unique categories and subcategories in separate lists.\n",
     "\n",
-    "categories, subcategories = crowdfunding_info_df[['category', 'subcategory']].apply(lambda col: col.unique())\n",
     "\n",
     "print(categories)\n",
     "print(subcategories)"
@@ -506,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -520,17 +510,13 @@
    ],
    "source": [
     "# Get the number of distinct values in the categories and subcategories lists.\n",
-    "\n",
-    "num_unique_categories = len(unique_categories)\n",
-    "num_unique_subcategories = len(unique_subcategories)\n",
-    "\n",
-    "print(num_unique_categories)\n",
-    "print(num_unique_subcategories)\n"
+    "print(len(categories))\n",
+    "print(len(subcategories))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -567,36 +553,28 @@
    ],
    "source": [
     "# Use a list comprehension to add \"cat\" to each category_id. \n",
-    "castegory_ids = np.arange(1, 10)\n",
-    "cat_ids = [f\"cat{category_id}\" for category_id in category_ids]\n",
     "\n",
-    "# Use a list comprehension to add \"subcat\" to each subcategory_id.  \n",
+    "# Use a list comprehension to add \"subcat\" to each subcategory_id.    \n",
     "\n",
-    "subcategory_ids = np.arange(1, 25)\n",
-    "subcat_ids = [f\"subcat{subcategory_id}\" for subcategory_id in subcategory_ids]\n",
-    "\n",
+    "    \n",
     "print(cat_ids)\n",
-    "print(subcat_ids)\n"
+    "print(scat_ids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name. (meaning : creating a DataFrame with two columns:category_id & category_name from the category array and list)\n",
+    "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
     "\n",
-    "category_df = pd.DataFrame({'category_id': cat_ids, 'category': categories})\n",
-    "\n",
-    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. (meaning : creating a DataFrame with two columns:subcategory_id & subcategory_name from the subcategory array and list)\n",
-    "\n",
-    "subcategory_df = pd.DataFrame({'subcategory_id': subcat_ids, 'subcategory': subcategories})"
+    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -687,20 +665,18 @@
        "8        cat9    journalism"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Validate Category df creation. \n",
-    "\n",
     "category_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -881,26 +857,24 @@
        "23       subcat24              audio"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Validate Subcategory df creation. \n",
-    "\n",
     "subcategory_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export categories_df and subcategories_df as CSV files.\n",
-    "\n",
     "category_df.to_csv(\"Resources/category.csv\", index=False)\n",
+    "\n",
     "subcategory_df.to_csv(\"Resources/subcategory.csv\", index=False)"
    ]
   },
@@ -933,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1085,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1132,7 @@
        "      <th>backers_count</th>\n",
        "      <th>country</th>\n",
        "      <th>currency</th>\n",
-       "      <th>launch_date</th>\n",
+       "      <th>launched_date</th>\n",
        "      <th>end_date</th>\n",
        "      <th>staff_pick</th>\n",
        "      <th>spotlight</th>\n",
@@ -1287,12 +1261,12 @@
        "3  Vision-oriented fresh-thinking conglomeration    4200     2477      failed   \n",
        "4                      Proactive foreground core    7600     5265      failed   \n",
        "\n",
-       "   backers_count country currency  launch_date    end_date  staff_pick  \\\n",
-       "0              0      CA      CAD   1581573600  1614578400       False   \n",
-       "1            158      US      USD   1611554400  1621918800       False   \n",
-       "2           1425      AU      AUD   1608184800  1640844000       False   \n",
-       "3             24      US      USD   1634792400  1642399200       False   \n",
-       "4             53      US      USD   1608530400  1629694800       False   \n",
+       "   backers_count country currency  launched_date    end_date  staff_pick  \\\n",
+       "0              0      CA      CAD     1581573600  1614578400       False   \n",
+       "1            158      US      USD     1611554400  1621918800       False   \n",
+       "2           1425      AU      AUD     1608184800  1640844000       False   \n",
+       "3             24      US      USD     1634792400  1642399200       False   \n",
+       "4             53      US      USD     1608530400  1629694800       False   \n",
        "\n",
        "   spotlight category & sub-category    category  subcategory  \n",
        "0      False        food/food trucks        food  food trucks  \n",
@@ -1302,25 +1276,18 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Rename the blurb, launched_at, and deadline columns.\n",
-    "#    - The \"blurb\" column is renamed as \"description.\"\n",
-    "#    - The \"launched_at\" column is renamed as \"launch_date\"\n",
-    "#    - The \"deadline\" column is renamed as \"end_date\"\n",
-    "\n",
-    "campaign_df.rename(columns={'blurb': 'description', 'launched_at': 'launch_date', 'deadline': 'end_date'}, inplace=True)\n",
-    "\n",
-    "campaign_df.head()\n"
+    "# Rename the blurb, launched_at, and deadline columns.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1354,7 +1321,7 @@
        "      <th>backers_count</th>\n",
        "      <th>country</th>\n",
        "      <th>currency</th>\n",
-       "      <th>launch_date</th>\n",
+       "      <th>launched_date</th>\n",
        "      <th>end_date</th>\n",
        "      <th>staff_pick</th>\n",
        "      <th>spotlight</th>\n",
@@ -1483,12 +1450,12 @@
        "3  Vision-oriented fresh-thinking conglomeration    4200.0    2477.0   \n",
        "4                      Proactive foreground core    7600.0    5265.0   \n",
        "\n",
-       "      outcome  backers_count country currency  launch_date    end_date  \\\n",
-       "0      failed              0      CA      CAD   1581573600  1614578400   \n",
-       "1  successful            158      US      USD   1611554400  1621918800   \n",
-       "2  successful           1425      AU      AUD   1608184800  1640844000   \n",
-       "3      failed             24      US      USD   1634792400  1642399200   \n",
-       "4      failed             53      US      USD   1608530400  1629694800   \n",
+       "      outcome  backers_count country currency  launched_date    end_date  \\\n",
+       "0      failed              0      CA      CAD     1581573600  1614578400   \n",
+       "1  successful            158      US      USD     1611554400  1621918800   \n",
+       "2  successful           1425      AU      AUD     1608184800  1640844000   \n",
+       "3      failed             24      US      USD     1634792400  1642399200   \n",
+       "4      failed             53      US      USD     1608530400  1629694800   \n",
        "\n",
        "   staff_pick  spotlight category & sub-category    category  subcategory  \n",
        "0       False      False        food/food trucks        food  food trucks  \n",
@@ -1498,59 +1465,55 @@
        "4       False      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Convert the goal and pledged columns to a `float` data type.\n",
-    "\n",
-    "campaign_df['goal'] = campaign_df['goal'].astype(float)\n",
-    "campaign_df['pledged'] = campaign_df['pledged'].astype(float)\n",
-    "\n",
-    "campaign_df.head()\n"
+    "# Convert the goal and pledged columns to a `float` data type.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cf_id                        int64\n",
-      "contact_id                   int64\n",
-      "company_name                object\n",
-      "description                 object\n",
-      "goal                       float64\n",
-      "pledged                    float64\n",
-      "outcome                     object\n",
-      "backers_count                int64\n",
-      "country                     object\n",
-      "currency                    object\n",
-      "launch_date                  int64\n",
-      "end_date                     int64\n",
-      "staff_pick                    bool\n",
-      "spotlight                     bool\n",
-      "category & sub-category     object\n",
-      "category                    object\n",
-      "subcategory                 object\n",
-      "dtype: object\n"
-     ]
+     "data": {
+      "text/plain": [
+       "cf_id                        int64\n",
+       "contact_id                   int64\n",
+       "company_name                object\n",
+       "description                 object\n",
+       "goal                       float64\n",
+       "pledged                    float64\n",
+       "outcome                     object\n",
+       "backers_count                int64\n",
+       "country                     object\n",
+       "currency                    object\n",
+       "launched_date                int64\n",
+       "end_date                     int64\n",
+       "staff_pick                    bool\n",
+       "spotlight                     bool\n",
+       "category & sub-category     object\n",
+       "category                    object\n",
+       "subcategory                 object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check the datatypes\n",
-    "\n",
-    "print(campaign_df.dtypes)"
+    "# Check the datatypes\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1547,7 @@
        "      <th>backers_count</th>\n",
        "      <th>country</th>\n",
        "      <th>currency</th>\n",
-       "      <th>launch_date</th>\n",
+       "      <th>launched_date</th>\n",
        "      <th>end_date</th>\n",
        "      <th>staff_pick</th>\n",
        "      <th>spotlight</th>\n",
@@ -1713,12 +1676,12 @@
        "3  Vision-oriented fresh-thinking conglomeration    4200.0    2477.0   \n",
        "4                      Proactive foreground core    7600.0    5265.0   \n",
        "\n",
-       "      outcome  backers_count country currency launch_date    end_date  \\\n",
-       "0      failed              0      CA      CAD  2020-02-13  2021-03-01   \n",
-       "1  successful            158      US      USD  2021-01-25  2021-05-25   \n",
-       "2  successful           1425      AU      AUD  2020-12-17  2021-12-30   \n",
-       "3      failed             24      US      USD  2021-10-21  2022-01-17   \n",
-       "4      failed             53      US      USD  2020-12-21  2021-08-23   \n",
+       "      outcome  backers_count country currency launched_date    end_date  \\\n",
+       "0      failed              0      CA      CAD    2020-02-13  2021-03-01   \n",
+       "1  successful            158      US      USD    2021-01-25  2021-05-25   \n",
+       "2  successful           1425      AU      AUD    2020-12-17  2021-12-30   \n",
+       "3      failed             24      US      USD    2021-10-21  2022-01-17   \n",
+       "4      failed             53      US      USD    2020-12-21  2021-08-23   \n",
        "\n",
        "   staff_pick  spotlight category & sub-category    category  subcategory  \n",
        "0       False      False        food/food trucks        food  food trucks  \n",
@@ -1728,54 +1691,14 @@
        "4       False      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Format the launched_date and end_date columns to datetime format (exclude \"time\")\n",
-    "from datetime import datetime as dt\n",
-    "\n",
-    "campaign_df['launch_date'] = pd.to_datetime(campaign_df['launch_date'], format='%Y-%m-%d').dt.date\n",
-    "campaign_df['end_date'] = pd.to_datetime(campaign_df['end_date'], format='%Y-%m-%d').dt.date\n",
-    "\n",
-    "\n",
-    "campaign_df.head()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cf_id                        int64\n",
-      "contact_id                   int64\n",
-      "company_name                object\n",
-      "description                 object\n",
-      "goal                       float64\n",
-      "pledged                    float64\n",
-      "outcome                     object\n",
-      "backers_count                int64\n",
-      "country                     object\n",
-      "currency                    object\n",
-      "launch_date                 object\n",
-      "end_date                    object\n",
-      "staff_pick                    bool\n",
-      "spotlight                     bool\n",
-      "category & sub-category     object\n",
-      "category                    object\n",
-      "subcategory                 object\n",
-      "dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(campaign_df.dtypes)"
+    "# Format the launched_date and end_date columns to datetime format\n",
+    "from datetime import datetime as dt\n"
    ]
   },
   {
@@ -3777,7 +3700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
